final commit primeira section

--- a/index.html
+++ b/index.html
@@ -79,10 +79,19 @@
             <!--=============== SPONSOR ===============-->
             <section class="sponsor section">
                 <div class="sponsor__container container grid">
-                    <img src="assets/img/sponsor1.png" alt="" class="sponsor__img">
-                    <img src="assets/img/sponsor2.png" alt="" class="sponsor__img">
-                    <img src="assets/img/sponsor3.png" alt="" class="sponsor__img">
-                    <img src="assets/img/sponsor4.png" alt="" class="sponsor__img">
+                    <div class="sponsor__content">
+                        <h1 class="sponsor__title">Do <b>14 BIS</b> ao <b>drone</b></h1>
+                    </div>
+                    <div class="sponsor__img">
+                        <img src="assets/img/augmented-reality 1.png" alt="">
+                    </div>
+                    <div class="sponsor__img" id="margin-img">
+                        <img src="assets/img/scroll 1.png" alt="">
+                    </div>
+                    <div class="sponsor__content">
+                        <h4>Rotacione o 3D com os dedos e toque 
+                            no ícone da realidade aumentada para interagir. </h4>
+                    </div>
                 </div>
             </section>
 
